--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@react-spring/web": "^9.7.3",
     "@supabase/supabase-js": "^2.52.1",
     "gh-pages": "^6.3.0",
+    "i18next": "^25.3.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-i18next": "^15.6.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
